few typos and style updates

--- a/deviant.tex
+++ b/deviant.tex
@@ -3,17 +3,21 @@
 \section{Discovering Business Processes from Positive \& Negative Traces}
 \label{sec:deviant}
 
+\todocdf{Forse possiamo aggiornare la notazione e usare P per le tracce positive, N per le tracce negative, M per il modello discovered}
+
 %\btext{CHiara G + Bolognesi: fare un sunto di deviant}
 %Vorremo riprendere la parte tecnica del lavoro under revision, senza chiamarlo ``background'' perché non è mica ancora pubblicato e assodato...
 
 
-Our approach is based on \nd binary miner \cite{deviant-tkde}, which given two input sets of positive and negative examples, aims to extract a model accepting all positive cases and rejecting all negatives. 
+Our approach is based on \btext{the} \nd binary miner~\cite{deviant-tkde}, which, given two input sets of positive and negative examples, aims to extract a model accepting all positive cases and rejecting all \btext{negative ones.} %negatives. 
 %This operation includes an abstraction step, so that the resulting model would allow to classify also unknown traces, not reported in the input log. Depending on the choices made during the discovery process, the learned model can``shape'' the set of unknown traces in different ways.
-In this work, we try to enrich the binary miner with the possibility to express domain-dependent preferences on the discovered model. Therefore, we need to report here some definitions and explanations from \cite{deviant-tkde} that are useful to introduce also our approach.
+In this work, we try to enrich the binary miner with the possibility to express domain-dependent preferences on the discovered model. Therefore, we need to report here some definitions and explanations from~\cite{deviant-tkde} that are useful to introduce %also
+our approach.
 
-\nd start from a certain \emph{language bias}: Given a set of Declare templates $D$ and a set of activities $A$, we identify with $D[A]$ the set of all possible grounding of templates in $D$ w.r.t. $A$, i.e. all the constraints that can be built using the given activities.
+\nd start\btext{s} from a certain \emph{language bias}: Given a set of \declare templates $D$ and a set of activities $A$, we identify with $D[A]$ the set of all possible grounding\btext{s} of templates in $D$ w.r.t. $A$, i.e. all the constraints that can be built using the given activities.
 
-We respectively denote with $L^+$ and $L^-$ the sets of positive and negative traces, reported in the input event log. \nd starts by considering a---possibly empty---initial model $P$, that is a set of \declare constraints known to characterise the examples in $L^+$. The goal of \nd is to refine $P$ taking into account both the positive and the negative traces.
+We respectively denote with $L^+$ and $L^-$ the sets of positive and negative traces %, reported 
+in the input event log. \nd starts by considering a --- possibly empty --- initial model $P$, that is a set of \declare constraints known to characterise the examples in $L^+$. The goal of \nd is to refine $P$ taking into account both the positive and the negative traces.
 
 \begin{definition}{}\label{def:cand}
 Given the initial model $P$, a candidate solution for the discovery task is any set of constraints $S\subseteq D[A]$ s.t.
